fix language files

--- a/language/en-GB/plg_system_uikit.sys.ini
+++ b/language/en-GB/plg_system_uikit.sys.ini
@@ -1,2 +1,5 @@
 PLG_SYSTEM_UIKIT="System - UIkit"
 PLG_SYSTEM_UIKIT_DESCRIPTION="The plugin provides the UIkit framework v3.21.16 If you want to change the version add the CDN address"
+PLG_SYSTEM_UIKIT_JSCDN="Enter a URL JS UIkit CDN"
+PLG_SYSTEM_UIKIT_ICONCDN="Enter a URL icon UIkit CDN"
+PLG_SYSTEM_UIKIT_CSSCDN="Enter a URL CSS UIkit CDN"
