--- a/language/pl-PL/plg_system_uikit.sys.ini
+++ b/language/pl-PL/plg_system_uikit.sys.ini
@@ -1,2 +1,7 @@
 PLG_SYSTEM_UIKIT="System - UIkit"
 PLG_SYSTEM_UIKIT_DESCRIPTION="Wtyczka dodaje framework UIkit v 3.21.16 Jeżeli chcesz zmienić wersję dodaj adres CDN"
+PLG_SYSTEM_UIKIT="System - UIkit"
+PLG_SYSTEM_UIKIT_DESCRIPTION="Wtyczka dodaje framework UIkit v 3.21.16 Jeżeli chcesz zmienić wersję dodaj adres CDN"
+PLG_SYSTEM_UIKIT_JSCDN="Wprowadź URL JS UIkit CDN"
+PLG_SYSTEM_UIKIT_ICONCDN="Wprowadź URL icon UIkit CDN"
+PLG_SYSTEM_UIKIT_CSSCDN="Wprowadź URL CSS UIkit CDN"
